--- a/login.html
+++ b/login.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription</title>
+    <title>Connexion</title>
 </head>
 <body>
-    <h1>Formulaire d'inscription</h1>
-
-    <form action="identification.php" method="POST">
-        <div>
-            <label for="nom">Nom :</label>
-            <input type="text" id="nom" name="nom" required>
-        </div>
+    <h1>Connexion</h1>
+    <form action="login.php" method="POST">
         <div>
             <label for="email">E-mail :</label>
             <input type="email" id="email" name="email" required>
@@ -21,10 +16,7 @@
             <label for="motdepasse">Mot de passe :</label>
             <input type="password" id="motdepasse" name="motdepasse" required>
         </div>
-        <div>
-            <button type="submit">S'inscrire</button>
-        </div>
+        <button type="submit">Se connecter</button>
     </form>
-    <a href="login.html" target="_blank">se connecter ! </a>
 </body>
 </html>
